2006-06-22 [paul]	2.3.1cvs14

	* configure.ac
		allow setting of man directory location

2006-06-22 [colin]	2.3.1cvs13

	* src/mainwindow.c
		Add 'View/Go to/Next unread folder'.
		I missed that :)

2006-06-22 [colin]	2.3.1cvs12

	* src/common/utils.c
		Add some subject prefixes
		Patch by Bjorn T Johansen <btj@havleik.no>

2006-06-22 [colin]	2.3.1cvs11

	* manual/advanced.xml
		Forgotten hidden pref

2006-06-21 [paul]	2.3.1cvs10

	* src/prefs_account.c
		complete the removal of 'Add date header' option

2006-06-21 [paul]	2.3.1cvs9

	* src/account.c
	* src/compose.c
	* src/prefs_account.c
	* src/prefs_account.h
		remove option to add date header - always
		add date header
	* src/etpan/imap-thread.c
		fix warnings (Thanks to Colin)

2006-06-21 [wwp]	2.3.1cvs8

	* src/folder.c
		set the attachment flag when inline text part are (file)named. This is more convenient
		when receiving (for instance) inline source files or patches sent using thunderbird.

2006-06-21 [paul]	2.3.1cvs7

	* src/inc.c
		fix off-by-one count of current msg in
		statusbar filtering progressbar

2006-06-21 [paul]	2.3.1cvs6

	* src/folder.c
		Show attachment icon even if the part is 'inline'
		if the following conditions are met:
		- content-type != 'text/plain'
		- content-type != '*/pgp-signature'
		- either 'name' or 'filename' parameter is not NULL
		
		Thanks to Colin

2006-06-21 [paul]	2.3.1cvs5

	* src/messageview.c
	* src/prefs_common.c
	* src/prefs_common.h
	* src/prefs_other.c
		add an option to 'Never send Return
		Receipts'
		Thanks to Colin

2006-06-20 [mones]	2.3.1cvs4

	* po/es.po
		updated
	* src/compose.c
		typo fixed (space after comma)
	* tools/make.themes.project
		remove exec mode from tarball files

2006-06-20 [colin]	2.3.1cvs3

	* src/news.c
	* src/procheader.c
	* src/unmime.c
		Better fix for \n's in headers (don't 
		break Received: and others)

2006-06-20 [paul]	2.3.1cvs2

	* src/alertpanel.c
	* src/textview.c
		improve legibility of phishing attempt
		dialog
