@@ -1615,3 +1615,4 @@
 ( cvs diff -u -r 1.36.2.66 -r 1.36.2.67 src/common/utils.c;  ) > 2.3.1cvs12.patchset
 ( cvs diff -u -r 1.274.2.118 -r 1.274.2.119 src/mainwindow.c;  ) > 2.3.1cvs13.patchset
 ( cvs diff -u -r 1.654.2.1660 -r 1.654.2.1661 configure.ac;  ) > 2.3.1cvs14.patchset
+( cvs diff -u -r 1.16.2.21 -r 1.16.2.22 src/prefs_customheader.c;  ) > 2.3.1cvs15.patchset
